--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
     "typescript": "^4.3.2",
     "vite": "^2.3.6",
     "vite-plugin-ssr": "^0.2.3"
+  },
+  "devDependencies": {
+    "prettier": "^2.3.2",
+    "vite-plugin-windicss": "^1.2.7",
+    "windicss": "^3.1.6"
   }
 }
