--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "server:prod": "cross-env NODE_ENV=production ts-node ./server"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^2.0.0-next.9",
+    "@mdx-js/react": "^1.6.22",
     "@types/express": "^4.17.12",
     "@types/node": "^15.12.1",
     "@types/react": "^17.0.9",
@@ -14,14 +16,24 @@
     "@vitejs/plugin-react-refresh": "^1.3.3",
     "cross-env": "^7.0.3",
     "express": "^4.17.1",
+    "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.3.2",
     "vite": "^2.3.6",
+    "vite-plugin-mdx": "^3.5.6",
     "vite-plugin-ssr": "^0.2.3"
   },
   "devDependencies": {
+    "@svgr/rollup": "^5.5.0",
+    "@types/svgr__rollup": "^4.3.1",
+    "@typescript-eslint/eslint-plugin": "^4.28.5",
+    "@typescript-eslint/parser": "^4.28.5",
+    "eslint": "^7.31.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
     "prettier": "^2.3.2",
     "vite-plugin-windicss": "^1.2.7",
     "windicss": "^3.1.6"
