--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "prettier": "^2.3.2",
+    "vite-plugin-rsw": "^1.8.0",
     "vite-plugin-windicss": "^1.2.7",
     "windicss": "^3.1.6"
   }
