Get an FPS camera working

--- a/packages/rust-404/Cargo.toml
+++ b/packages/rust-404/Cargo.toml
@@ -41,6 +41,8 @@ features = [
   'WebGlProgram',
   'WebGlShader',
   'Performance',
+  'KeyboardEvent',
+  'MouseEvent',
   'Window',
   "console"
 ]
