--- a/packages/rust-404/Cargo.toml
+++ b/packages/rust-404/Cargo.toml
@@ -13,7 +13,9 @@ default = ["console_error_panic_hook"]
 [dependencies]
 wasm-bindgen = "0.2.75"
 js-sys = "0.3.52"
-glam = "0.17.3"
+glam = { version = "0.17.3", features = ["bytemuck"] }
+bytemuck = { version = "1.7.2", features = ["derive"] }
+anyhow = "1.0.42"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
