--- a/packages/rust-404/Cargo.toml
+++ b/packages/rust-404/Cargo.toml
@@ -16,6 +16,8 @@ js-sys = "0.3.52"
 glam = { version = "0.17.3", features = ["bytemuck"] }
 bytemuck = { version = "1.7.2", features = ["derive"] }
 anyhow = "1.0.42"
+futures = "0.3.16"
+wasm-bindgen-futures = "0.4.25"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
@@ -36,12 +38,14 @@ features = [
   'Document',
   'Element',
   'HtmlCanvasElement',
+  'HtmlImageElement',
   'WebGlBuffer',
   'WebGlVertexArrayObject',
   'WebGl2RenderingContext',
   'WebGlUniformLocation',
   'WebGlProgram',
   'WebGlShader',
+  'WebGlTexture',
   'Performance',
   'KeyboardEvent',
   'MouseEvent',
