Add chunk generation

--- a/packages/rust-404/Cargo.toml
+++ b/packages/rust-404/Cargo.toml
@@ -18,6 +18,8 @@ bytemuck = { version = "1.7.2", features = ["derive"] }
 anyhow = "1.0.42"
 futures = "0.3.16"
 wasm-bindgen-futures = "0.4.25"
+rand = "0.8.4"
+getrandom = { version = "*", features = ["js"]}
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
