Kindof finish mouse picking

--- a/packages/rust-404/Cargo.toml
+++ b/packages/rust-404/Cargo.toml
@@ -45,7 +45,9 @@ features = [
   'WebGlVertexArrayObject',
   'WebGl2RenderingContext',
   'WebGlUniformLocation',
+  'WebGlRenderbuffer',
   'WebGlProgram',
+  'WebGlFramebuffer',
   'WebGlShader',
   'WebGlTexture',
   'Performance',
