--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "server:prod": "cross-env NODE_ENV=production ts-node ./server"
   },
   "dependencies": {
+    "@mapbox/rehype-prism": "^0.7.0",
     "@mdx-js/mdx": "^2.0.0-next.9",
     "@mdx-js/react": "^1.6.22",
     "@types/express": "^4.17.12",
@@ -19,6 +20,8 @@
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "rehype-katex": "^4.0.0",
+    "remark-math": "^4.0.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.3.2",
     "vite": "^2.3.6",
@@ -30,6 +33,7 @@
     "@types/svgr__rollup": "^4.3.1",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
+    "@windicss/plugin-animations": "^1.0.9",
     "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
